<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/store_order_item_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orderNumber"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orderContents"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/store_order_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orderItem" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totalPrice"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/store_order_item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price1" />

</LinearLayout>